[package]
name = "safe-once"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = { git = "https://github.com/Amanieu/parking_lot/", rev = "80194730f2104fa5ca92fe17a619b57d0677ece7", features = ["nightly", "deadlock_detection"], optional = true }
parking_lot_core = { git = "https://github.com/Amanieu/parking_lot/", rev = "80194730f2104fa5ca92fe17a619b57d0677ece7", features = ["nightly", "deadlock_detection"], optional = true }
atomic = { version = "0.5", optional = true }

[features]
default = ["sync", "unsync"]
sync = ["parking_lot", "parking_lot_core", "atomic"]
unsync = []
